...
                            <constraint firstItem="nNH-Pf-gjX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9Uc-qG-FPV"/>
                            <constraint firstItem="nNH-Pf-gjX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="URP-Sw-Pcc"/>
                            <constraint firstItem="nNH-Pf-gjX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ulZ-dT-o7U"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Items" id="9Mf-GG-7Ua">
                        <barButtonItem key="rightBarButtonItem" title="Sort" id="oSo-yn-KjY">
                            <connections>
                                <action selector="sortAction:" destination="BYZ-38-t0r" id="Vzi-2e-bBQ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
